Fix bugs Stop intersection from redrawing when mouse slides on parameters sliders Compute distances ahead of time